# telegram-navigator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.ru.md  docker-compose.yml  generate_session.py  pyproject.toml  requirements.txt  schema.sql
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: deployment.md
scripts/: apply_schema.py  migrate_to_supabase.py  translate_existing.py
src/: main.py  scheduler_main.py
src/bot/: callbacks.py  handlers.py  keyboards.py  messages.py
src/bot/messages/: __init__.py  en.py  ru.py
src/config/: constants.py  prompts.py  settings.py
src/database/: client.py  factory.py  models.py  queries.py  sqlite_queries.py
src/services/: classifier.py  digest.py  embedder.py  fetcher.py  toc_generator.py  translator.py
src/utils/: errors.py  helpers.py  i18n.py
